[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yape"
version = "0.3.1"
description = "Yape - Yet another pipeline executor"
readme = "README.rst"
license = { file = "LICENSE" }
keywords = ["pipeline"]
authors = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "argparse-subdec @ git+https://github.com/maicondallg/python-argparse-subdec",
    "dill~=0.3.4",
]
[project.optional-dependencies]
dev = [
    "mypy(>=0.910,<1.0)",
    "pytest~=7.1.3",
]

[project.scripts]
yape = "yape.__main__:run"

[tool.setuptools]
packages = ["yape"]
package-data = { "yape" = ["py.typed"] }